# seoul-bus-ad-pricing

./: .gitattributes  .gitignore  CLAUDE.md  README.md  claude_code_첫메시지.md  pyproject.toml  수집_사양서.md
data/sejong/: 103-1_노선별정류장단위(일).xls  113_정류장별이용자.xls  20250514_노선별 정류장(세종).csv  세종특별자치시_횡단보도.csv
data/seoul/: README.md  모델테이블.csv  서울시버스정류소위치정보(20260506).xlsx
data/seoul/features/: POI_상권.csv  README.md  공시지가.csv  도로망.csv  승하차_노선_3-4월.csv  정류장_좌표.csv  중심지거리.csv  지하철_역마스터.csv  지하철근접.csv
data/seoul/price/: 덕플레이스_서울_모델용.csv  덕플레이스_서울_전체.csv  덕플레이스_서울_전체_원시.csv  덕플레이스_서울_정제.csv  덕플레이스_서울시_서초구_sample.csv  덕플레이스_자치구요약.csv
data/seoul/raw/: BUS_STATION_BOARDING_MONTH_202603.csv  BUS_STATION_BOARDING_MONTH_202604.csv  README.md  osm_seoul_drive.graphml  (+1 more)
model/: README.md  error_band.json  feature_extractor.py  grid_250m.csv  predict.py  shap_global_importance.csv  try_predict.py  xgb_best_params.json
reports/: 8조. 도시설계_중간발표.pptx
scripts/: ablation.py  assemble_and_check.py  build_boarding_feature.py  build_centrality_feature.py  build_error_band.py  build_grid.py  build_jiga_feature.py  build_model_table.py  build_poi_feature.py  build_road_feature.py  build_stop_coords.py  build_subway_feature.py  build_subway_master.py  diag_unmatched.py  gate_boarding.py  make_ppt_figures.py  model_utils.py  qc_extractor.py  shap_analyze.py  smoke_keys.py  train_eval.py  tune_xgb.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
web/scripts/: build-data.mjs  shots.mjs
web/src/: App.tsx  main.tsx  styles.css
(+16 files in other folders)
