[project]
name = "seoul-bus-ad"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "shap>=0.52.0",
    "xgboost>=3.2.0",
    "xlrd>=2.0.2",
]
